# Generated by Django 4.2.7 on 2025-04-13 19:33

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('empresas', '0001_initial'),
        ('core', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='SolicitudConfeccion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('descripcion', models.TextField()),
                ('cantidad_prendas', models.PositiveIntegerField()),
                ('fecha_solicitud', models.DateTimeField(auto_now_add=True)),
                ('fecha_entrega_requerida', models.DateField()),
                ('estado', models.CharField(choices=[('pendiente', 'Pendiente'), ('cotizada', 'Cotizada'), ('aceptada', 'Aceptada'), ('rechazada', 'Rechazada'), ('en_proceso', 'En Proceso'), ('completada', 'Completada')], default='pendiente', max_length=20)),
                ('cotizacion', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('empresa_integral', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='empresas.microempresaintegral')),
                ('empresa_satelite', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='empresas.microempresasatelite')),
            ],
            options={
                'verbose_name': 'Solicitud de Confección',
                'verbose_name_plural': 'Solicitudes de Confección',
            },
        ),
        migrations.CreateModel(
            name='PedidoPersonalizado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('descripcion', models.TextField()),
                ('referencia_imagen', models.ImageField(blank=True, null=True, upload_to='pedidos_personalizados/')),
                ('cantidad', models.PositiveIntegerField()),
                ('fecha_solicitud', models.DateTimeField(auto_now_add=True)),
                ('fecha_entrega_estimada', models.DateField(blank=True, null=True)),
                ('estado', models.CharField(choices=[('solicitado', 'Solicitado'), ('cotizado', 'Cotizado'), ('aceptado', 'Aceptado'), ('rechazado', 'Rechazado'), ('en_proceso', 'En Proceso'), ('completado', 'Completado')], default='solicitado', max_length=20)),
                ('cotizacion', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.usuario')),
                ('empresa', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='empresas.microempresaintegral')),
            ],
            options={
                'verbose_name': 'Pedido Personalizado',
                'verbose_name_plural': 'Pedidos Personalizados',
            },
        ),
        migrations.CreateModel(
            name='Pedido',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cantidad', models.PositiveIntegerField()),
                ('fecha_pedido', models.DateTimeField(auto_now_add=True)),
                ('fecha_entrega', models.DateField()),
                ('estado', models.CharField(choices=[('pendiente', 'Pendiente'), ('en_proceso', 'En Proceso'), ('completado', 'Completado'), ('cancelado', 'Cancelado')], default='pendiente', max_length=20)),
                ('total', models.DecimalField(decimal_places=2, max_digits=10)),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.usuario')),
                ('empresa', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='empresas.microempresaintegral')),
                ('producto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='empresas.productoterminado')),
            ],
            options={
                'verbose_name': 'Pedido',
                'verbose_name_plural': 'Pedidos',
            },
        ),
    ]
